--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -23,8 +23,8 @@
 .navbar-logo {
   display: flex;
   align-items: center;
-  text-decoration: none !important; /* Purple blue link kadhun taknya sathi */
-  color: #ffffff !important; /* HOUSE color white */
+  text-decoration: none !important; 
+  color: #ffffff !important; 
   font-weight: 900;
   font-size: 1.7rem;
   font-family: 'Poppins', sans-serif;
@@ -55,7 +55,7 @@
 
 .search-bar-icon {
   position: absolute;
-  left: 15px; /* Dava baju la set kela */
+  left: 15px; 
   color: #888;
   z-index: 5;
   transition: 0.3s;
@@ -63,7 +63,7 @@
 
 .search-input {
   width: 100%;
-  padding: 10px 15px 10px 45px; /* Left padding dilli icon sathi */
+  padding: 10px 15px 10px 45px; 
   border-radius: 25px;
   border: 1px solid #444;
   background: #2b2b2b;
