--- a/src/pages/MovieDetails.css
+++ b/src/pages/MovieDetails.css
@@ -83,22 +83,21 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-top: 110px; /* Hero title pasun gap */
+  padding-top: 110px; 
 }
 
-/* Meta Bar - Clear visibility on white background */
-/* Hero Content Wrapper sathi */
+
 .hero-content-title, .hero-content {
-  padding: 0 8% 0; /* Khali padding chi garaj nahi */
+  padding: 0 8% 0; 
   z-index: 2;
   width: 100%;
   
-  /* Yene akkha title ani meta section varti sarakto */
+ 
   transform: translateY(-160px); 
   
   display: flex;
   flex-direction: column;
-  gap: 15px; /* Title ani Meta madhla antar */
+  gap: 15px;
 }
 
 
@@ -108,7 +107,7 @@
   display: flex;
   gap: 20px;
   align-items: center;
-  color: #ffffff; /* White color dila karan te aata background image var aahe */
+  color: #ffffff; 
   font-weight: 600;
   text-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
 }
@@ -123,7 +122,7 @@
 
 .theater-tag {
   color: #ffffff;
-  background: rgba(248, 68, 100, 0.8); /* Light red semi-transparent background */
+  background: rgba(248, 68, 100, 0.8); 
   padding: 3px 12px;
   border-radius: 6px;
 }
